Updated gitignore and gitattributes

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ export_presets.cfg
 
 # Mono-specific ignores
 .mono/
+
+#MacOS specic
+.DS_Store
+
+# System/tool-specific ignores
+.directory
+
+#VS Code specific
+.vs/
+.vscode/
+
+Master/
